<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/opportunitiesFragment"
            android:icon="@drawable/ic_opportunities"
            android:title="@string/opportunities" />
        <item
            android:id="@+id/savedOpportunitiesFragment"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/saved" />
        <item
            android:id="@+id/myApplicationsFragment"
            android:icon="@drawable/ic_applications"
            android:title="@string/applications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_logout" />
        </menu>
    </item>

</menu> 