<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vohoportunitysconect.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_opportunitiesFragment"
            app:destination="@id/opportunitiesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_applicationsFragment"
            app:destination="@id/myApplicationsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_opportunityDetailsFragment"
            app:destination="@id/nav_opportunity_details">
            <argument
                android:name="opportunityId"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/opportunitiesFragment"
        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunitiesFragment"
        android:label="@string/opportunities"
        tools:layout="@layout/fragment_opportunities">
        <action
            android:id="@+id/action_opportunitiesFragment_to_opportunityDetailsFragment"
            app:destination="@id/nav_opportunity_details">
            <argument
                android:name="opportunityId"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/savedOpportunitiesFragment"
        android:name="com.example.vohoportunitysconect.ui.saved.SavedFragment"
        android:label="@string/saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_savedFragment_to_opportunityDetailsFragment"
            app:destination="@id/nav_opportunity_details">
            <argument
                android:name="opportunityId"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/myApplicationsFragment"
        android:name="com.example.vohoportunitysconect.fragments.ApplicationsFragment"
        android:label="@string/applications"
        tools:layout="@layout/fragment_applications" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.vohoportunitysconect.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_opportunity_details"
        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunityDetailsFragment"
        android:label="@string/opportunity_details"
        tools:layout="@layout/fragment_opportunity_details">
        <argument
            android:name="opportunityId"
            app:argType="string" />
    </fragment>

</navigation> 